# adiaAssessment_linkedList

./: CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml
app/: main.cpp
code/header/list/: simplyLinkedList.h  simplyLinkedList_0_orderRefactor.h  simplyLinkedList_1_twoPointersInOne.h
code/header/tools/: scenario.h  tools.h
code/src/list/: simplyLinkedList.cpp  simplyLinkedList_0_orderRefactor.cpp  simplyLinkedList_1_twoPointersInOne.cpp
code/src/tools/: scenario.cpp  tools.cpp
resource/: plotScript.ipynb
resource/.ipynb_checkpoints/: plotScript-checkpoint.ipynb
test/: sharedTestRoutine.h
test/simplyLinkedList/: 0_orderRefactor_halfFowardHalfBackward.cpp  0_orderRefactor_onlyBackward.cpp  0_orderRefactor_randomForwardBackward.cpp  1_twoPointersInOn_halfFowardHalfBackward.cpp  1_twoPointersInOn_onlyBackward.cpp  1_twoPointersInOn_onlyForward.cpp  1_twoPointersInOn_randomForwardBackward.cpp  simplyLinkedList_0_orderRefactor_onlyForward.cpp
